# pyflowmaps

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
pyflowmaps/: __init__.py  flow.py  flowmaker.py  ilct.py  math_tools.py
src/pyflowmaps/: __init__.py  dave4vm.py  flow.py  flowmaker.py  ilct.py  math_tools.py
test/: HOWTO.ipynb
test/data/: cube_sunspot.fits
