[metadata]
name = pyflowmaps
version = 0.0.1
author = Jose Ivan Campos Rozo
author_email = hypnus1803@gmail.com
description = Package to infer horizontal proper motions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hypnus1803/pyflowmaps
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyflowmaps
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyflowmaps
