[metadata]
name = pyflowmaps
version = 0.1.0
author = Jose Ivan Campos Rozo
author_email = hypnus1803@gmail.com
description = Package to infer horizontal proper motions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hypnus1803/pyflowmaps
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19
    scipy>=1.5
    astropy>=4.2

[options.packages.find]
where = src

[options.extras_require]
sunpy =
    sunpy>=3.0
